TEST_PROGRAMS/INVALID/hongji_chen/invalidFloatingPoints.min
#invalid Floating Points

var a : float;

a = .3;			#valid
a = 0.34;		#valid
a = -0.22;		#valid
a = -23.;		#valid

a = .;			#invalid
